# pipeline-kit

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci-go.yml  ci-uni.yml  ci.yml  docker-build-push.yml  docker-publish-ghcr.yml  smoke-reusable.yml
examples/: ci-example.yml
examples/docker/: Dockerfile
examples/go-hello/: hello.go  hello_test.go
src/pipeline_kit/: __init__.py  placebo.py
templates/: caller-ci-go.yml  caller-docker-publish-ghcr.yml
tests/: test_placebo.py
